css/App.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  text-align: center;

  color: rgba(255, 255, 255, 0.87);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  background-color: #242424;
}

main {
  width: 100vw;
  place-items: center;
}

.tile-list {
  width: clamp(500px, 90vw, 800px);
  display: flex;
  flex-wrap: wrap;
}

.tile-list .tile {
  width: calc(100% / 13);
  aspect-ratio: 1 / 1;
  background-color: #404f4f;
  border: #293333 2px solid;
}

.tile > div {
  width: 100%;
  height: 100%;
  color: #d8d8d8;
  font-weight: bold;
  padding: 1px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.tile > div:has(img) {
  color: #feb700;
  cursor: pointer;
}

.tile > div:has(img) > span {
  margin-top: -10px;
}

.tile > div > img {
  width: 50%;
  aspect-ratio: 1 / 1;
}

.tile > div > span {
  width: 100%;
  line-height: 0;
}

.tile > div.can-collect {
  background-color: #666543;
  color: #ffb700;
  border: #7e7d52 2px solid;
}

.tile > div.can-collect > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.tile > div.can-collect > span > img {
  height: 15px;
  aspect-ratio: 1 / 1;
  margin: 0;
}

